// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Menu Basic Menu 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-15"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className=""
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Link Menu 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-16"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className=""
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Menu Footer 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-17"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className=""
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Menu Header 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-18"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className=""
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Menu Sub Header 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-19"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className=""
    >
      Menu dropdown
    </span>
  </button>
</div>
`;
